--- a/source/FastRsync.Compression/FastRsync.Compression.csproj
+++ b/source/FastRsync.Compression/FastRsync.Compression.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotNetZip" Version="1.16.0" />
+    <PackageReference Include="ProDotNetZip" Version="1.19.0" />
   </ItemGroup>
 
 </Project>
